[gd_scene load_steps=8 format=3 uid="uid://cbkwp2har6kj5"]

[ext_resource type="Script" path="res://Scripts/slime.gd" id="1_iioqp"]
[ext_resource type="Texture2D" uid="uid://l8eq7msbvk3q" path="res://Rocky Roads/Enemies/slime_blue.png" id="1_qquv4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfgk8"]
size = Vector2(11.5, 6.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxcne"]
size = Vector2(13.5, 8.5)

[sub_resource type="Animation" id="Animation_6l4lm"]
resource_name = "Move"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../SlimeBlue:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}

[sub_resource type="Animation" id="Animation_ghuq2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../SlimeBlue:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t51dt"]
_data = {
"Move": SubResource("Animation_6l4lm"),
"RESET": SubResource("Animation_ghuq2")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_iioqp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.25, 1.25)
shape = SubResource("RectangleShape2D_nfgk8")

[node name="RayCast2DV" type="RayCast2D" parent="."]
position = Vector2(-9.5, -3.5)
scale = Vector2(0.435, 0.435)
target_position = Vector2(0, 25.2874)

[node name="RayCast2DH" type="RayCast2D" parent="."]
position = Vector2(-0.595, -0.89)
rotation = 1.5708
scale = Vector2(0.325, 0.325)
target_position = Vector2(0.0308752, 29.2308)

[node name="SlimeBlue" type="Sprite2D" parent="."]
position = Vector2(-0.5, -3.5)
texture = ExtResource("1_qquv4")
hframes = 5
vframes = 2
frame = 1

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-0.5, 0.5)

[node name="DeadZone" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.75, -0.25)
shape = SubResource("RectangleShape2D_xxcne")
debug_color = Color(0.701961, 0, 0.0117647, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionShape2D")
autoplay = "Move"
speed_scale = 0.5
libraries = {
"": SubResource("AnimationLibrary_t51dt")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
